# MaSimViz

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ascfile.cpp  ascfile.h  chartcustom.cpp  chartcustom.h  chatbotinterface.h  chatbotwithapi.cpp  chatbotwithapi.h  chatbotwithapillamacpp.cpp  chatbotwithapillamacpp.h  chatbotwithapiopenai.cpp  chatbotwithapiopenai.h  chatbotwithmodel.cpp  chatbotwithmodel.h  colormapwidget.h  dataprocessor.cpp  dataprocessor.h  glwidgetcustom.cpp  glwidgetcustom.h  graphicsviewcustom.cpp  graphicsviewcustom.h  loader.cpp  loader.h  loaderraster.cpp  loaderraster.h  loadersqlite.cpp  loadersqlite.h  loaderyml.cpp  loaderyml.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  masimviz.qrc  preference.cpp  preference.h  squareitem.cpp  (+6 more)
resources/css/: chatscreen.css
resources/html/: chatscreen.html
